--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -60,3 +60,28 @@ services:
     volumes:
       - ./db-data/mongo/:/data/db
 
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+    - "1025:2025"
+    - "8025:8025"
+
+  mail-service:
+    build:
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    ports:
+      - "8082:80"
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      - MAIL_DOMAIN=localhost
+      - MAIL_HOST=mailhog
+      - MAIL_PORT=1025
+      - MAIL_ENCRYPTION=none
+      - MAIL_USERNAME=""
+      - MAIL_PASSWORD=""
+      - FROM_NAME="John Smith"
+      - FROM_ADDRESS=john.smith@example.com
